--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,13 +1,28 @@
 security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
-        in_memory: { memory: ~ }
+        in_memory:
+          memory:
+            users:
+              admin:
+                password: admin
+                roles:  'ROLE_ADMIN'
+    encoders:
+      Symfony\Component\Security\Core\User\User: plaintext
+
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
             anonymous: ~
+            http_basic: ~
+            logout:
+                path: /logout
+                target: /
+
+
+
 
             # activate different ways to authenticate
 
@@ -16,3 +31,9 @@ security:
 
             # form_login: ~
             # https://symfony.com/doc/current/security/form_login_setup.html
+
+
+
+    access_control:
+            # require ROLE_ADMIN for /admin*
+            - { path: ^/admin, roles: ROLE_ADMIN }
