--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -28,7 +28,7 @@ app_list_game:
   controller: App\Controller\GameController::page_list_roleplay
 
 app_add_scenar:
-  path: /add/scenar/{type}
+  path: /admin/add/scenar/{type}
   controller: App\Controller\AddscenarController::addscenar
   defaults:
           type: sujet
@@ -39,3 +39,5 @@ app_test:
   path: /test
   controller: App\Controller\SujetController::count _sujet
 
+logout:
+    path: /logout
