--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -16,6 +16,9 @@ security:
             security: false
         main:
             anonymous: ~
+            form_login:
+              login_path: login
+              check_path: login
             http_basic: ~
             logout:
                 path: /logout
